--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -4,3 +4,4 @@
 <p><h3><%= @artist.bio%></h4></p>
 
 <p><%= link_to 'Edit Artist', edit_artist_path%></p>
+<p><%= link_to 'Delete Artist', destroy_artist_path%></p>
