--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,5 +3,5 @@
 <p><h2><%= @artist.age %></h3></p>
 <p><h3><%= @artist.bio%></h4></p>
 
-<p><%= link_to 'Edit Artist', edit_artist_path%></p>
-<p><%= link_to 'Delete Artist', destroy_artist_path%></p>
+<p><%= button_to 'Edit Artist', edit_artist_path%></p>
+<p><%= button_to 'Delete Artist', destroy_artist_path%></p>
